# Linux

./: camera.txt  opencv.txt  ros_camera_rp_v2_jetson.cpp  test.txt
20240103/GUGUDAN/: GUGUDAN.c  test
20240103/thread1/: Makefile  test
20240103/thread2/: Makefile
C/test_c/: Makefile  test  test_c.cpp
C/thread/20230105/sum1/: Makefile  sum1.c  test
C/thread/20230105/sum2/: sum2.c  test
C/thread/20240103/GUGUDAN/: Makefile
C/thread/20240103/thread1/: thread1.c
C/thread/20240103/thread2/: thread2.c
C/thread/20240104/sum1/: sum1.c  test
C/thread/20240104/sum2/: Makefile  sum2.c  test
C/thread/20240104/thread1/: test  thread1.c
C/thread/20240104/thread2/: Makefile  test  thread2.c
C/thread/20240105/sum2/: sum2.c  test
Topic_List/: move_waypoint.xlsx  pioneer_control.xlsx
car_test_control/: i2c_connect.ino
catkin_ws/teleop/scripts/: teleop.py
catkin_ws/turtle_pose/: CMakeLists.txt  package.xml
catkin_ws/turtle_pose/src/: turtle_pose_node.cpp
gugudan/src/: listener_gugudan.cpp  talker_gugudan.cpp
km_catkin_ws/m_car_control_km/: CMakeLists.txt
km_catkin_ws/m_car_control_km/launch/: m_car_control_km.launch
laser_scan/: CMakeLists.txt  package.xml
laser_scan/launch/: laser_scan.launch
laser_scan/src/: laser_scan_node.cpp
math/vector1/: Makefile  vector1  vector1.cpp
move_waypoint/: CMakeLists.txt
move_waypoint/src/: move_waypoint_node.cpp
moving_average_filter/: CMakeLists.txt
nav_gui/: package.xml
nav_gui/scripts/: nav_gui.py
pioneer_sim/: CMakeLists.txt  package.xml
pioneer_sim/src/: pioneer_node.cpp
pkg/my_first_pkg/launch/: my_first_launch.launch
pkg/my_second_pkg/: CMakeLists.txt
sim_catkin_ws/aeb_control/src/: aeb_control_node.cpp
sim_catkin_ws/cmd_vel_mux/: CMakeLists.txt
sim_catkin_ws/cmd_vel_mux/launch/: cmd_vel_mux_node.launch
sim_catkin_ws/cmd_vel_mux/src/: cmd_vel_mux_node.cpp
sim_catkin_ws/imu_correction/launch/: imu_correction.launch
sim_catkin_ws/imu_correction/src/: imu_correction_node.cpp
sim_catkin_ws/kalman_filter/: CMakeLists.txt  package.xml
sim_catkin_ws/kalman_filter/launch/: kalman_filter.launch
sim_catkin_ws/kalman_filter/src/: kalman_filter_node.cpp
sim_catkin_ws/line_control/launch/: line_control.launch
sim_catkin_ws/line_control/src/: line_control_node.cpp
sim_catkin_ws/move_waypoint/: package.xml
sim_catkin_ws/move_waypoint/launch/: move_waypoint.launch
sim_catkin_ws/moving_average_filter/: package.xml
sim_catkin_ws/moving_average_filter/launch/: moving_average_filter.launch
sim_catkin_ws/moving_average_filter/src/: moving_average_filter_node.cpp
sim_catkin_ws/nav_gui/: CMakeLists.txt
sim_catkin_ws/nav_gui/scripts/: nav_gui.ui
sim_catkin_ws/pioneer_control/: CMakeLists.txt  package.xml
sim_catkin_ws/pioneer_control/launch/: pioneer_control.launch
sim_catkin_ws/pioneer_control/src/: pioneer_control_node.cpp
sim_catkin_ws/pioneer_sim/src/: pioneer_node.cpp
sim_catkin_ws/wall_following/: CMakeLists.txt
sim_catkin_ws/wall_following/launch/: wall_following.launch
sim_catkin_ws/wall_following/src/: wall_following_node.cpp
sim_catkin_ws/waypoint_control_system/: CMakeLists.txt  package.xml
sim_catkin_ws/waypoint_control_system/data/: waypoint1.txt  waypoint2.txt
sim_catkin_ws/waypoint_control_system/launch/: waypoint_control_system.launch
sim_catkin_ws/waypoint_control_system/src/: waypoint_control_system_node.cpp
sim_catkin_ws/yaw_control/launch/: yaw_control.launch
sim_catkin_ws/yaw_control/src/: yaw_control_node.cpp
sw_catkin_ws/20240726_yaw_control/handsfree_ros_imu_a9_new/scripts/: hfi_a9_ros.py  hfi_a9_ros_new.py
sw_catkin_ws/20240726_yaw_control/sw_car_yaw_control/: CMakeLists.txt  package.xml
sw_catkin_ws/20240726_yaw_control/sw_car_yaw_control/launch/: sw_car_yaw_control.launch
sw_catkin_ws/20240726_yaw_control/sw_car_yaw_control/src/: sw_car_yaw_control.cpp
sw_catkin_ws/20240726_yaw_control/sw_m_car_control/: CMakeLists.txt  package.xml
sw_catkin_ws/20240726_yaw_control/sw_m_car_control/launch/: sw_m_car_control.launch
sw_catkin_ws/20240726_yaw_control/sw_m_car_control/scripts/: teleop.py
sw_catkin_ws/20240726_yaw_control/sw_m_car_control/src/: sw_m_car_serial_control_node.cpp
sw_catkin_ws/m_car_control_km/: package.xml
sw_catkin_ws/m_car_control_km/scripts/: teleop.py
sw_catkin_ws/m_car_control_km/src/: m_car_serial_control_km_node.cpp
sw_catkin_ws/sw_m_car_control/Arduino/2024.07.18_Gachon_UNI/: 2024.07.18_Gachon_UNI.ino
sw_catkin_ws/sw_m_car_control/src/: sw_m_car_serial_control_node.cpp
test_catkin_ws/gugudan/src/: talker_gugudan.cpp
test_catkin_ws/my_first_pkg/: CMakeLists.txt
test_catkin_ws/my_second_pkg/: CMakeLists.txt
test_catkin_ws/my_second_pkg/src/: operator_node.cpp
turtle&rosbag/: 2024-01-09-15-12-16.bag
turtle/turtle_pose/: CMakeLists.txt
turtle/turtle_pose/src/: turtle_pose_node.cpp
w_catkin_ws/: text.txt
w_catkin_ws/OpenCV_Vision_Line_Following/WON/car_control/: car_control_node_teleop.cpp
w_catkin_ws/OpenCV_Vision_Line_Following/WON/won/jetson_camera_rp_v2/: CMakeLists.txt  package.xml
w_catkin_ws/OpenCV_Vision_Line_Following/WON/won/jetson_camera_rp_v2/copy/: ros_camera_rp_v2_jetson (copy).cpp
w_catkin_ws/OpenCV_Vision_Line_Following/WON/won/jetson_camera_rp_v2/src/: ros_camera_rp_v2_jetson.cpp
w_catkin_ws/OpenCV_Vision_Line_Following/camera/: CMakeLists.txt  package.xml
w_catkin_ws/OpenCV_Vision_Line_Following/camera/src/: camera_node.cpp
w_catkin_ws/OpenCV_Vision_Line_Following/car_control/src/: car_control_node.cpp
w_catkin_ws/OpenCV_Vision_Line_Following/i2c_communication_sonar/: i2c_communication_sonar.ino
w_catkin_ws/OpenCV_Vision_Line_Following/line_control/: CMakeLists.txt  package.xml  right_pid.txt  roi (copy).txt  roi.txt
w_catkin_ws/OpenCV_Vision_Line_Following/line_control/launch/: line_control.launch
w_catkin_ws/OpenCV_Vision_Line_Following/line_control/src/: line_control_node.cpp
w_catkin_ws/car_control/launch/: car_control.launch
w_catkin_ws/car_control/src/: car_control_node.cpp
(+6 files in other folders)
